--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run clean-cache",
+    "clean-cache": "node scripts/clean-cache.js",
     "start": "next start",
     "lint": "next lint"
   },
