--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npm run clean-cache",
-    "clean-cache": "node scripts/clean-cache.js",
+    "build": "next build && npm run pages:build",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "preview": "npx wrangler pages dev .vercel/output/static",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.49.2"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.11.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
