--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "ably": "^2.17.0",
-    "next": "^14.3.0",
+    "next": "14.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "1.13.0",
+    "@cloudflare/next-on-pages": "1.11.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "^14.3.0",
+    "eslint-config-next": "14.2.18",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
