--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npm run pages:build",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npx wrangler pages dev .vercel/output/static",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,7 +17,6 @@
     "react-hook-form": "^7.49.2"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "1.11.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
