--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npm run clean-cache",
+    "build": "next build && npm run pages:build && npm run clean-cache",
+    "pages:build": "npx @cloudflare/next-on-pages",
     "clean-cache": "node scripts/clean-cache.js",
     "start": "next start",
     "lint": "next lint"
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.49.2"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.11.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
