Fix: Separar scripts de build para evitar recursÃ£o no @cloudflare/next-on-pages

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npm run pages:build && npm run clean-cache",
+    "build": "next build",
+    "build:pages": "npm run build && npx @cloudflare/next-on-pages && npm run clean-cache",
     "pages:build": "npx @cloudflare/next-on-pages",
     "clean-cache": "node scripts/clean-cache.js",
     "start": "next start",
